# fastapi-with-langgraph

./: .env.example  .gitignore  README.md  pyproject.toml
app/: __init__.py  main.py  ui.py
app/agents/: commerce.py  graph.py  llm.py  nodes.py  product_model.py  schemas.py  state.py  tools.py
docs/: API_TESTING.md  ARCHITECTURE.md  MODEL_ROADMAP.md  NODES_AND_EDGES.md  TOPICS.md
tests/: conftest.py  test_agent_graph.py
