[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fastapi-with-langgraph"
version = "0.1.0"
description = "FastAPI project with a complex LangGraph agent example."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "langgraph>=1.0.0,<2.0.0",
    "python-dotenv>=1.0.0",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
gemini = [
    "google-genai>=1.0.0",
]
openai = [
    "openai>=2.0.0",
]
ai = [
    "google-genai>=1.0.0",
    "openai>=2.0.0",
]
test = [
    "httpx>=0.27.0",
    "pytest>=8.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
